--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["cocotbext/apb"]
+only-include = ["cocotbext/apb"]
 
 [tool.uv.sources]
 cocotb = { git = "https://github.com/cocotb/cocotb", rev = "master" }
